--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         if (isIOS) {
             // 替换为你的实际 GitHub Pages 地址
-            const manifestUrl = 'https://your-username.github.io/your-repo-name/manifest.plist';
+            const manifestUrl = 'https://github.com/ZhuYuRan001/IOSIAPDownload/blob/main/manifest.plist';
             const installUrl = `itms-services://?action=download-manifest&url=${manifestUrl}`;
             
             downloadSection.innerHTML = `
