--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>点击下面的按钮下载安装应用</p>
         
         <div id="download-section">
-            <a href="itms-services://?action=download-manifest&url=https://zhuyuran001.github.io/IOSIAPDownload/manifest.plist" class="download-btn">
+            <a href="itms-services://?action=download-manifest&url=/IOSIAPDownload/manifest.plist" class="download-btn">
                 📱 立即安装应用
             </a>
             <p class="note">
