--- a/install.html
+++ b/install.html
@@ -837,12 +837,12 @@
 
       <!-- App Header -->
       <div class="app-header">
-        <div class="app-icon">
-          <img src="i object-fit: cover;mage/logo.png" alt="SERIS Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 26px;" />
-        </div>
+          <div class="app-icon">
+            <img src="image/logo.png" alt="SERIS Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 26px;" />
+          </div>
         <div class="app-info">
           <h1 class="app-name">SERIS</h1>
-          <p class="app-subtitle">您的每日情绪追踪助手</p>
+          <p class="app-subtitle">智能设备控制中心</p>
           <div class="header-actions">
             <div class="get-container">
               <button class="get-button" id="getButton" onclick="handleGet()">
@@ -933,8 +933,8 @@
         </div>
         <div class="rating-item">
           <div class="rating-title">排行榜</div>
-          <div class="rating-value rating-highlight">#3</div>
-          <div class="rating-caption">健康与健身</div>
+          <div class="rating-value rating-highlight">#8</div>
+          <div class="rating-caption">工具</div>
         </div>
         <div class="rating-item">
           <div class="rating-title">开发者</div>
@@ -942,7 +942,7 @@
             class="rating-value"
             style="font-size: 12px; margin-top: 8px; text-align: center"
           >
-            MindEase Tech
+            SERIS Tech
           </div>
           <div class="rating-caption"></div>
         </div>
@@ -965,11 +965,11 @@
           <span class="version-date">2天前</span>
         </div>
         <p class="version-notes">
-          欢迎使用 MindEase Journal！<br />
-          - 通过我们直观的界面轻松追踪每日情绪。<br />
-          - 可视化您的情绪变化趋势。<br />
-          - 获取针对当前心情的个性化建议。<br />
-          - 安全私密地存储您的回忆和想法。
+          欢迎使用 SERIS！<br />
+          - 全新的蓝牙连接体验，配对更快速稳定。<br />
+          - 优化的设备控制界面，操作更简单直观。<br />
+          - 增强的实时反馈功能，响应更及时。<br />
+          - 改进的设备管理系统，支持更多智能硬件。
         </p>
       </div>
 
@@ -1017,31 +1017,30 @@
       <div class="description">
         <div class="description-content" id="descContent">
           <p>
-            SERIS
-            是一款创新的潮玩收藏应用。发现、收集和交易您喜爱的潮流玩具，与全球潮玩爱好者建立联系，分享您的收藏乐趣。
+            欢迎来到 SERIS，您的智能设备控制中心！通过简单直观的操作界面，让您轻松管理和控制各种智能硬件设备，享受智能生活带来的便捷体验。
           </p>
           <br />
           <p><strong>主要功能：</strong></p>
           <ul>
-            <li>🎨 <strong>潮玩发现：</strong> 浏览最新最热的潮流玩具系列。</li>
+            <li>📱 <strong>蓝牙连接：</strong> 快速、轻松地配对各类智能硬件设备。</li>
             <li>
-              📦
-              <strong>收藏管理：</strong> 轻松管理和展示您的珍贵收藏。
+              ⚡
+              <strong>实时控制：</strong> 轻松操作设备，获得即时反馈和响应。
             </li>
             <li>
-              🔄 <strong>交易市场：</strong> 与其他玩家安全地交换心仪的潮玩。
+              🎯 <strong>设备管理：</strong> 统一管理多个智能设备，一目了然。
             </li>
             <li>
-              👥
-              <strong>社区互动：</strong> 加入潮玩爱好者社区，分享您的收藏故事。
+              🔧
+              <strong>智能配置：</strong> 自定义设备参数，打造个性化控制方案。
             </li>
             <li>
-              🔔 <strong>新品提醒：</strong> 第一时间获取限量款发售通知。
+              🔒 <strong>安全可靠：</strong> 加密通信保障您的设备和数据安全。
             </li>
           </ul>
           <br />
           <p>
-            立即加入 SERIS 社区，开启您的潮玩收藏之旅！无论您是资深玩家还是新手，SERIS 都将为您带来极致的收藏体验。
+            立即下载 SERIS，开启您的智能生活新体验！无论是智能家居、可穿戴设备还是其他智能硬件，SERIS 都能为您提供稳定高效的控制解决方案。
           </p>
         </div>
         <button
@@ -1352,7 +1351,7 @@
       <div class="info-list">
         <div class="info-item">
           <span class="info-label">供应商</span>
-          <span class="info-value">MindEase Technology Co., Ltd.</span>
+          <span class="info-value">SERIS Technology Co., Ltd.</span>
         </div>
         <div class="info-item">
           <span class="info-label">大小</span>
@@ -1360,7 +1359,7 @@
         </div>
         <div class="info-item">
           <span class="info-label">类別</span>
-          <span class="info-value">健康与健身</span>
+          <span class="info-value">工具</span>
         </div>
         <div class="info-item">
           <span class="info-label">兼容性</span>
@@ -1376,7 +1375,7 @@
         </div>
         <div class="info-item" style="border-bottom: none">
           <span class="info-label">版权</span>
-          <span class="info-value">© 2025 MindEase Tech</span>
+          <span class="info-value">© 2025 SERIS Tech</span>
         </div>
       </div>
     </div>
