--- a/index.html
+++ b/index.html
@@ -1,66 +1,83 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>企业应用下载</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            text-align: center;
-            padding: 50px 20px;
-            background: #f5f5f7;
-        }
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            background: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-        .download-btn {
-            display: inline-block;
-            padding: 15px 30px;
-            background: #007AFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 18px;
-            margin: 20px 0;
-        }
-        .download-btn:hover {
-            background: #0051D5;
-        }
-        .note {
-            color: #666;
-            font-size: 14px;
-            margin-top: 20px;
-        }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        text-align: center;
+        padding: 50px 20px;
+        background: #f5f5f7;
+      }
+      .container {
+        max-width: 400px;
+        margin: 0 auto;
+        background: white;
+        padding: 40px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+      .download-btn {
+        display: inline-block;
+        padding: 15px 30px;
+        background: #007aff;
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        font-size: 18px;
+        margin: 20px 0;
+      }
+      .download-btn:hover {
+        background: #0051d5;
+      }
+      .note {
+        color: #666;
+        font-size: 14px;
+        margin-top: 20px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>企业应用下载</h1>
-        <p>点击下面的按钮下载安装应用</p>
-        
-        <div id="download-section">
-            <a href="itms-services://?action=download-manifest&url=/IOSIAPDownload/manifest.plist" class="download-btn">
-                📱 立即安装应用
-            </a>
-            <p class="note">
-                如果无法安装，请检查：<br>
-                1. 是否在 Safari 中打开<br>
-                2. 网络连接是否正常<br>
-                3. 设备是否信任企业证书
-            </p>
-        </div>
-        
-        <div class="note">
-            <p>⚠️ 请在 Safari 浏览器中打开</p>
-            <p>📱 仅支持 iOS 设备</p>
-            <p>🏢 仅限企业内部使用</p>
-        </div>
+      <h1>企业应用下载</h1>
+      <p>点击下面的按钮下载安装应用</p>
+
+      <div id="download-section">
+        <a
+          href="itms-services://?action=download-manifest&url=/manifest.plist"
+          class="download-btn"
+        >
+          📱 立即安装应用
+        </a>
+        <p class="note">
+          如果无法安装，请检查：<br />
+          1. 是否在 Safari 中打开<br />
+          2. 网络连接是否正常<br />
+          3. 设备是否信任企业证书
+        </p>
+      </div>
+      <button onclick="openVPNSettings()">vpn设置</button>
+      <button onclick="openDeviceManagement()">设备管理</button>
+      <button onclick="openAppStore()">App Store</button>
+      <div class="note">
+        <p>⚠️ 请在 Safari 浏览器中打开</p>
+        <p>📱 仅支持 iOS 设备</p>
+        <p>🏢 仅限企业内部使用</p>
+      </div>
     </div>
-</body>
+  </body>
+  <script>
+    function openVPNSettings() {
+      window.open("App-Prefs:root=General&path=VPN");
+    }
+    function openDeviceManagement() {
+      window.open("App-Prefs:root=General&path=ManagedConfigurationList");
+    }
+    function openAppStore() {
+      window.open("App-Prefs:root=General&path=DEVICE_MANAGEMENT");
+    }
+  </script>
 </html>
